# asteroids-python

./: asteroids-python.apk  index.html  main.py  pyproject.toml
.github/workflows/: pygbag.yml
asteroids/: __main__.py  asteroid.py  bullet.py  collisions.py  constants.py  engine.py  explosion.py  game.py  gravity_well.py  maths.py  missile.py  particle.py  physics.py  player.py  polygon.py  shield.py
asteroids/behaviours/: gravity.py
asteroids/engine/: __init__.py  engine.py  particle.py  scene.py
asteroids/scenes/: level.py
tests/: test_maths.py
