[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["Ray Yamamoto Hilton <ray.hilton@bluejay-ai.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
pymunk = "^6.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
